# icu.bazel

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  main.cc
.github/workflows/: linux_bazel.yml  macos_bazel.yml
source/: BUILD.bazel  build_icudata.sh.tpl  gen_icudata.bzl  gen_icudata_c.sh.tpl  icupkg.in.macos.tpl  icupkg.in.tpl
